--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<p>333</p>
-<app-reactive-form></app-reactive-form>
-<app-template-driven-form></app-template-driven-form>
+<h1>Angular Router</h1>
+<nav>
+  <a routerLink="/react" routerLinkActive="active">React Form</a>
+  <br />
+  <a routerLink="/driven" routerLinkActive="active">Driven Form</a>
+</nav>
+<router-outlet></router-outlet>
