--- a/src/app/reactive-form/reactive-form.css
+++ b/src/app/reactive-form/reactive-form.css
@@ -1,10 +1,59 @@
 .react-container {
-  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 20%;
+  padding-left: 80px;
+  width: 280px;
+  height: 700px;
+  /* border: 1px solid blue; */
+  box-shadow: 5px 5px 10px rgba(0, 1, 6, 0.5), -3px -3px 10px rgba(0, 1, 6, 0.5);
 }
-/* fieldset {
-  border: none;
-} */
 
-input.ng-touched.ng-invalid {
-  border-color: red;
+div.field-err {
+  min-height: 15px;
+  width: auto;
+  font-size: 10px;
+  margin-top: -15px;
+  /* border: 1px solid rgb(4, 4, 87); */
 }
+
+fieldset {
+  border: none;
+}
+.mail-field {
+  padding-left: 12px;
+}
+
+.region {
+  margin-top: 20px;
+}
+
+.btn-form {
+  margin-top: 20px;
+  position: relative;
+  display: inline-block;
+  width: 10em;
+  height: 2.5em;
+  line-height: 2.5em;
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 0 -1px 1px #777;
+  color: #fff;
+  outline: none;
+  border: 2px solid #792bf6;
+  border-radius: 5px;
+  box-shadow: 0 0 0 60px rgba(0, 0, 0, 0) inset,
+    0.1em 0.1em 0.2em rgb(2, 0, 136);
+  background: linear-gradient(#8275fb, #5438f4 48%, #3402ea 52%, #3f17f0);
+}
+.btn-form:active {
+  top: 0.1em;
+  left: 0.1em;
+  box-shadow: 0 0 0 60px rgba(0, 0, 0, 0.05) inset;
+}
+/* input.ng-touched.ng-invalid {
+  border-color: red;
+} */
