--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <h1>Angular Router</h1>
-<nav>
+<nav class="head">
   <a routerLink="/react" routerLinkActive="active">React Form</a>
-  <br />
   <a routerLink="/driven" routerLinkActive="active">Driven Form</a>
 </nav>
 <router-outlet></router-outlet>
