--- a/src/app/template-driven-form/template-driven-form.css
+++ b/src/app/template-driven-form/template-driven-form.css
@@ -6,7 +6,7 @@
   margin-left: 20%;
   padding-left: 80px;
   width: 280px;
-  height: 700px;
+  height: 680px;
   /* border: 1px solid blue; */
   box-shadow: 5px 5px 10px rgba(0, 1, 6, 0.5), -3px -3px 10px rgba(0, 1, 6, 0.5);
 }
@@ -20,5 +20,9 @@ div.field-err {
   /* border: 1px solid rgb(4, 4, 87); */
 }
 .region {
+  margin-top: 20px;
+}
+
+.send-mail {
   margin-top: 20px;
 }
