fix confirm-pass validtor

--- a/src/app/template-driven-form/template-driven-form.css
+++ b/src/app/template-driven-form/template-driven-form.css
@@ -26,3 +26,12 @@ div.field-err {
 .send-mail {
   margin-top: 20px;
 }
+
+.radio {
+  padding-right: 10px;
+  color: #fff;
+}
+
+.send-mail {
+  color: #fff;
+}
