--- a/src/app/reactive-form/reactive-form.css
+++ b/src/app/reactive-form/reactive-form.css
@@ -14,14 +14,25 @@
 div.field-err {
   min-height: 15px;
   width: auto;
-  font-size: 10px;
+  font-size: 11px;
   margin-top: -15px;
+  color: rgb(175, 0, 0);
   /* border: 1px solid rgb(4, 4, 87); */
 }
 
 fieldset {
   border: none;
 }
+
+.radio {
+  padding-right: 10px;
+  color: #fff;
+}
+
+.send-mail {
+  color: #fff;
+}
+
 .mail-field {
   padding-left: 12px;
 }
