--- a/src/app/reactive-form/reactive-form.html
+++ b/src/app/reactive-form/reactive-form.html
@@ -13,9 +13,7 @@
 
       <div
         class="field-err"
-        *ngIf="reactiveForm.controls.user.controls.userName.invalid
-                && (reactiveForm.controls.user.controls.userName.dirty
-                || reactiveForm.controls.user.controls.userName.touched)"
+        *ngIf="User.controls.userName.invalid && (User.controls.userName.dirty || User.controls.userName.touched)"
       >
         wrong symbol
       </div>
@@ -26,9 +24,7 @@
       </mat-form-field>
       <div
         class="field-err"
-        *ngIf="reactiveForm.controls.user.controls.firstName.invalid
-              && (reactiveForm.controls.user.controls.firstName.dirty
-              || reactiveForm.controls.user.controls.firstName.touched)"
+        *ngIf="User.controls.firstName.invalid && (User.controls.firstName.dirty || User.controls.firstName.touched)"
       >
         wrong symbol
       </div>
@@ -39,9 +35,7 @@
       </mat-form-field>
       <div
         class="field-err"
-        *ngIf="reactiveForm.controls.user.controls.lastName.invalid
-              && (reactiveForm.controls.user.controls.lastName.dirty
-              || reactiveForm.controls.user.controls.lastName.touched)"
+        *ngIf="User.controls.lastName.invalid && (User.controls.lastName.dirty || User.controls.lastName.touched)"
       >
         wrong symbol
       </div>
@@ -51,10 +45,14 @@
       <mat-label>Email</mat-label>
       <input
         matInput
+        pattern="^([\w.%+-]+)@([\w-]+\.)+([\w]{2,})"
         formControlName="email"
         placeholder="Ex. pat@example.com"
       />
-      <mat-error class="field-err" *ngIf="reactiveForm.controls.email.errors">
+      <mat-error
+        class="field-err"
+        *ngIf="reactiveForm.controls.email.errors?.pattern"
+      >
         Enter a valid email address
       </mat-error>
     </mat-form-field>
@@ -94,15 +92,15 @@
           class="field-err"
           *ngIf="passChild.controls.repeatPass.errors?.incorrect"
         >
-          Password no Matc
+          Password no Match
         </div>
       </div>
     </fieldset>
     <br />
 
     <mat-radio-group formControlName="sex" class="example-radio-group">
-      <mat-radio-button value="Male">Male</mat-radio-button>
-      <mat-radio-button value="Female">Female</mat-radio-button>
+      <mat-radio-button class="radio" value="Male">Male</mat-radio-button>
+      <mat-radio-button class="radio" value="Female">Female</mat-radio-button>
     </mat-radio-group>
     <br />
 
@@ -116,10 +114,9 @@
     </mat-form-field>
     <br />
 
-    <input type="checkbox" formControlName="sendEmail" />
-    <span>Send me email</span>
-    <br />
-    <!-- <button (click)="consol()">!!!!!!!!</button> -->
+    <div class="send-mail">
+      <mat-checkbox formControlName="sendEmail">Send me Email! </mat-checkbox>
+    </div>
 
     <button class="btn-form" type="submit" [disabled]="!reactiveForm.valid">
       Submit
