--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,16 @@ body {
   left: 0.1em;
   box-shadow: 0 0 0 60px rgba(0, 0, 0, 0.05) inset;
 }
+
+.btn-form:disabled {
+  background: linear-gradient(#8275fb, #6850f3 48%, #461be4 52%, #512dee);
+  color: #777;
+}
+
+.not-found {
+  padding-left: 150px;
+  font-weight: 900;
+  margin-top: 100px;
+  font-size: 2em;
+  color: rgb(73, 1, 1);
+}
