--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>Angular Router</h1>
+<h1 class="lazy">
+  Angular Router & <span class="lazy-txt"> Lazy loading</span>
+</h1>
 <nav class="head">
   <a routerLink="/react" routerLinkActive="active">React Form</a>
   <a routerLink="/driven" routerLinkActive="active">Driven Form</a>
