--- a/src/app/template-driven-form/template-driven-form.css
+++ b/src/app/template-driven-form/template-driven-form.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin-left: 20%;
+  margin-left: 170px;
   padding-left: 80px;
   width: 280px;
   height: 680px;
